--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,7 +22,14 @@ jobs:
         go-version: '1.22'
 
     - name: Build
-      run: go build -v ./...
+      run: go build -o keydash -v ./...
 
     - name: Test
       run: go test -v ./...
+
+    - name: Upload Go binary as artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: go-binary
+        path: ./keydash
+
