--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -34,17 +34,20 @@ jobs:
 
     - name: Create ZIP file with Bash script and Go binary
       run: |
-        zip -r keydash.zip bash-setup/install.sh ./keydash
+        zip -r keydash.zip install.sh ./keydash
+
+    - name: Get commit SHA
+      id: commit_sha
+      run: echo "COMMIT_SHA=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
 
     - name: Upload Go binary as artifact
       uses: actions/upload-artifact@v4
       with:
-        name: go-binary
-        path: keydash.zip
+        name: "go-binary-${{ env.COMMIT_SHA }}"
+        path: "keydash-${{ env.COMMIT_SHA }}.zip"
 
-    - name: Upload Go binary for windows as artifact
+    - name: Upload Go binary for Windows as artifact
       uses: actions/upload-artifact@v4
       with:
-        name: go-binary-windows
-        path: ./keydash.exe
-
+        name: "go-binary-windows-${{ env.COMMIT_SHA }}"
+        path: "./keydash.exe"
