--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -44,7 +44,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: "go-binary-${{ env.COMMIT_SHA }}"
-        path: "keydash-${{ env.COMMIT_SHA }}.zip"
+        path: "keydash.zip"
 
     - name: Upload Go binary for Windows as artifact
       uses: actions/upload-artifact@v4
